conflito horario cliente